--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "rollup-plugin-dts": "^5.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "ts-jest": "^29.4.1",
-    "typescript": "^5.1.0"
+    "typescript": "^5.1.0",
+    "tslib": "^2.8.1"
   },
   "repository": {
     "type": "git",
@@ -63,5 +64,8 @@
   },
   "publishConfig": {
     "access": "restricted"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-darwin-arm64": "^4.46.2"
   }
 }
