--- a/package.json
+++ b/package.json
@@ -29,14 +29,14 @@
   ],
   "author": "Agile Software Engineering",
   "peerDependencies": {
-    "@mui/joy": ">=5.0.0",
+  "@mui/joy": ">=5.0.0-beta.52",
     "react": ">=17.0.0",
     "react-dom": ">=17.0.0"
   },
   "devDependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@mui/joy": "^5.0.0-beta.0",
+  "@mui/joy": "^5.0.0-beta.52",
     "@mui/material": "^7.3.1",
     "@rollup/plugin-commonjs": "^25.0.0",
     "@rollup/plugin-node-resolve": "^15.0.0",
@@ -46,7 +46,10 @@
     "@types/react-dom": "^18.2.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.45.0",
+    "eslint": "^8.57.1",
+  "rimraf": "^4.0.0",
+  "glob": "^9.0.0",
+    
     "eslint-plugin-react": "^7.33.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "react": "^18.2.0",
