set verbatimModuleSyntax to true

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "declaration": true,
     "declarationMap": true,
     "outDir": "dist",
-    "module": "esnext"
+    "module": "esnext",
+    "verbatimModuleSyntax": true
   },
   "include": ["src/**/*"],
   "exclude": [
