--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "build:watch": "rollup -c -w",
     "dev": "rollup -c -w",
     "type-check": "tsc --noEmit",
-    "lint": "eslint src --ext .ts,.tsx",
-    "lint:fix": "eslint src --ext .ts,.tsx --fix",
+    "lint": "eslint src/**/*.{ts,tsx}",
+    "lint:fix": "eslint src/**/*.{ts,tsx} --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "prepublishOnly": "npm run build"
@@ -29,14 +29,15 @@
   ],
   "author": "Agile Software Engineering",
   "peerDependencies": {
-  "@mui/joy": ">=5.0.0-beta.52",
+    "@mui/joy": ">=5.0.0-beta.52",
     "react": ">=17.0.0",
     "react-dom": ">=17.0.0"
   },
   "devDependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-  "@mui/joy": "^5.0.0-beta.52",
+    "@eslint/js": "^9.35.0",
+    "@mui/joy": "^5.0.0-beta.52",
     "@mui/material": "^7.3.1",
     "@rollup/plugin-commonjs": "^25.0.0",
     "@rollup/plugin-node-resolve": "^15.0.0",
@@ -47,19 +48,23 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.57.1",
-    "rimraf": "^4.0.0",
-    "glob": "^9.0.0",
-    
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.33.0",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "glob": "^9.0.0",
+    "globals": "^16.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rimraf": "^4.0.0",
     "rollup": "^3.25.0",
     "rollup-plugin-dts": "^5.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "ts-jest": "^29.4.1",
+    "tslib": "^2.8.1",
     "typescript": "^5.1.0",
-    "tslib": "^2.8.1"
+    "typescript-eslint": "^8.43.0"
   },
   "repository": {
     "type": "git",
