--- a/.github/workflows/publish_npm_package.yml
+++ b/.github/workflows/publish_npm_package.yml
@@ -2,6 +2,7 @@ name: "Publish npm Package"
 on:
   release:
     types: [created]
+  workflow_dispatch:
 
 jobs:
   publish:
@@ -18,5 +19,5 @@ jobs:
       - name: Install dependencies
         run: npm i
 
-      - name: Build package
-        run: npm run build
+      - name: Publish to npm
+        run: npm publish
