--- a/.github/workflows/publish_npm_package.yml
+++ b/.github/workflows/publish_npm_package.yml
@@ -1,10 +1,13 @@
 name: "Publish npm Package"
 on:
-  release:
-    types: [created]
   push:
+    tags:
+      - "v*"
     branches:
       - npm-package-migration
+
+permissions:
+  id-token: write
 
 jobs:
   publish:
@@ -16,7 +19,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "18"
-          cache: "npm"
+          registry-url: "https://registry.npmjs.org"
 
       - name: Install dependencies
         run: npm i
