--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -6,10 +6,6 @@ on:
   pull_request:
     branches: [main]
 
-permissions:
-  id-token: write
-  contents: write
-
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -54,6 +50,9 @@ jobs:
 
   tmp-publish:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: write
     steps:
       - uses: actions/checkout@v5
 
@@ -66,5 +65,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Install latest npm
+        run: npm install -g npm@latest
+
       - name: Publish to npm
-        run: npm publish
+        run: npm publish --provenance --access public
