--- a/package.json
+++ b/package.json
@@ -76,5 +76,8 @@
   "optionalDependencies": {
     "@rollup/rollup-darwin-arm64": "^4.46.2",
     "@rollup/rollup-linux-x64-gnu": "^4.46.2"
+  },
+  "dependencies": {
+    "@mui/icons-material": "^7.3.2"
   }
 }
